# AIGC-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: deep-research-report (2).md  xin.md  代码审计与风险处理记录.md  实验方案.md  实验结果.txt  实验运行指南.md
examples/: run_ccfled_phase1_autodl.sh  run_probe_example.ps1  run_server_example.sh
scripts/analysis/: __init__.py  audit_complexity_proxies.py
scripts/data/: download_coco_from_dda.py  make_chameleon_manifest.py  make_dda_coco_manifest.py  make_manifest.py  make_pair_manifest.py
scripts/evaluation/: evaluate_conditional.py  evaluate_local_prior.py  evaluate_probe.py  fit_beyond_gmm.py  fit_feature_scorer.py
scripts/preprocessing/: cache_ccfled_features.py  prepare_beyond_precomputed.py  prepare_lnp_dataset.py
scripts/training/: train_conditional.py  train_lnp_extractor.py  train_lowlevel_precomputed.py  train_lowlevel_pretext.py  train_probe.py
scripts/visualization/: visualize_heatmap.py
src/okk/: __init__.py  backbones.py  beyond_lowlevel.py  ccfled.py  condition_encoder.py  conditional_detector.py  config.py  dataset.py  features_dino_response.py  lnp_dataset.py  lnp_model.py  losses.py  lowlevel_encoder.py  metrics.py  transforms.py  utils.py
